--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header>
     <!-- <button id="toggle">Toggle Light/Dark Mode</button>??????? -->
   </header>
-  
+
   <aside>
     <h2>My First Blog</h2>
   </aside>
@@ -30,7 +30,7 @@
       <input type="text" id="title" name="title">
       <label for="content">Content</label>
       <textarea name="content" id="content"></textarea>
-      <p  style="display: none;" id="error" >Please complete the form</p>
+      <p  style="display: none;" id="error" >Please complete the form.</p>
       <input type="submit" value="Submit">
     </form>
   </section>
