--- a/index.html
+++ b/index.html
@@ -18,24 +18,29 @@
     <!-- <button id="toggle">Toggle Light/Dark Mode</button>??????? -->
   </header>
 
-  <aside>
-    <h2>My First Blog</h2>
-  </aside>
+  <main>
+    <aside>
+      <h2>My First Blog</h2>
+    </aside>
+ 
 
-  <section>
-    <form>
-      <label for="username">User Name</label>
-      <input type="text" id="username" name="username"> 
-      <label for="title">Title</label>
-      <input type="text" id="title" name="title">
-      <label for="content">Content</label>
-      <textarea name="content" id="content"></textarea>
-      <p  style="display: none;" id="error" >Please complete the form.</p>
-      <input type="submit" value="Submit">
-    </form>
-  </section>
+    <section>
+      <form>
+        <label for="username">User Name</label>
+        <input type="text" id="username" name="username"> 
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title">
+        <label for="content">Content</label>
+        <textarea name="content" id="content"></textarea>
+        <p  style="display: none;" id="error" >Please complete the form.</p>
+        <input type="submit" value="Submit">
+      </form>
+    </section>
+
+  </main>
 
 <script src="./assets/js/form.js"></script>
+
 </body>
 
 </html>
