light/dark toggle

--- a/blog.html
+++ b/blog.html
@@ -17,14 +17,19 @@
 <body>
     <header>
         <h1>My First Blog</h1>
-        <button id="toggle">Toggle Light/Dark Mode</button>
-        <!-- light mode dark mode toggle  -->
+        <button id="toggle">Light Dark</button>
 
         <button id="back">Back</button>
 
     </header>
 
     <main>
+      <h1></h1>
+      <h2></h2>
+      <h3></h3>
+      <h4></h4>
+      <h5></h5>
+
       <article>
         <blockquote></blockquote>
         <h2></h2>
@@ -34,7 +39,9 @@
     </main>
 
     <footer>
-        
+        <ul>
+          Profilio: Erin Jacobsen
+        </ul>
     </footer>
   <!-- TODO: Create header, main, and footer elements -->
 
