--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </head>
 
 <body>
-  <header>
-    <!-- <button id="toggle">Toggle Light/Dark Mode</button>??????? -->
-  </header>
-  
+    <header>
+      <button id="toggle">&#9728</button>
+    </header>
+  <main>
   <aside>
     <h2>My First Blog</h2>
   </aside>
@@ -34,6 +34,7 @@
       <input type="submit" value="Submit">
     </form>
   </section>
+  </main>
 
 <script src="./assets/js/form.js"></script>
 </body>
