working on light dark color class toggle

--- a/blog.html
+++ b/blog.html
@@ -24,11 +24,11 @@
     </header>
 
     <main>
-      <h1></h1>
-      <h2></h2>
-      <h3></h3>
-      <h4></h4>
-      <h5></h5>
+      <h1>Blog Title</h1>
+      <h2>Title 1</h2>
+      <h3>Title 2</h3>
+      <h4>title Again</h4>
+      <h5>More of this </h5>
 
       <article>
         <blockquote></blockquote>
